# enrollment_2022

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  locustfile.py  pyproject.toml
.github/workflows/: ci.yml  main.yml
analyzer/: alembic.ini  database.db
analyzer/api/: app.py  middleware.py  schema.py
analyzer/api/handlers/: __init__.py  delete.py  imports.py  node.py  sales.py  statistic.py
analyzer/db/: __main__.py  core.py  crud.py  dal.py  hierarchy_manager.py  schema.py  update_queries.py  utils.py
analyzer/db/alembic/: env.py
analyzer/db/alembic/versions/: 1f0047479a82_.py  372ff9de02ad_remove_foreign_key_from_parent_id_in_.py  430813b0434d_forbid_change_of_is_category_on_shop_.py  45de4e0f2514_optimization_pragmas.py  4b1034d5040c_add_category_info_table.py  4cdc399aff5e_add_unithierarchy_table.py  694a46a124cd_.py  783182284d72_initial.py  883c53b19249_initial.py  ac52c337a19e_add_custom_trigger_on_table_shop_unit.py  b3f71a359844_initial.py  b9583efe6b55_index_parent_id_and_unit_id_fields.py  c11b6527acbf_add_last_update_field_in_shopunit.py  f664e1e54e38_add_last_update_field_to_category_info.py
analyzer/db/queries/: hierarchy.py  unit.py
analyzer/utils/: database.py  misc.py  testing.py
app/: database.py  main.py  models.py
deploy/: ansible.cfg  deploy.yml  hosts.ini
deploy/roles/analyzer/handlers/: main.yml
deploy/roles/analyzer/tasks/: main.yml
deploy/roles/analyzer/templates/: docker-compose.yml.j2
deploy/roles/docker/defaults/: main.yml
deploy/roles/docker/files/: docker-compose.service
deploy/roles/docker/handlers/: main.yml
deploy/roles/docker/tasks/: main.yml
deploy/roles/docker/templates/: daemon.json.j2  docker-defaults.j2
tests/: conftest.py  unit_test.py
tests/api/: conftest.py  test_delete.py  test_imports.py  test_nodes.py  test_sales.py  test_stats.py
tests/migrations/: test_stairway.py
