[tool.poetry]
name = "enrollment_2022"
version = "0.1.0"
description = ""
authors = ["Sidoruk Danil Vadimovich <danilsidoruknv@yandex.ru>"]

packages = [
    { include = "analyzer" }
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.37"
alembic = "^1.8.0"
typer = "^0.4.1"
asyncpg = "^0.25.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
fastapi-code-generator = "^0.3.5"
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2"
pytest = "^7.1.2"
SQLAlchemy-Utils = "^0.38.2"
yarl = "^1.7.2"
pytest-asyncio = "^0.18.3"

[tool.isort]
py_version = 38
profile = "black"

[tool.black]
target-version = ['py38']
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
analyzer-api = "analyzer.api.app:start"
analyzer-db = "analyzer.db.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
